--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+::-webkit-scrollbar {
+  width: 5px;
+  height: 8px;
+  background-color: black;
+}
+::-webkit-scrollbar-thumb {
+  background: white;
+  border-radius: 5%;
+}
